kubernetes/ns-ingress-nginx/tmp/traefik-ingress-jenkins.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: jenkins
spec:
  rules:
  - host: jenkins-ingress.past123.com
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins
          servicePort: 80
